--- a/ChatApp/src/view/ClientForm.fxml
+++ b/ChatApp/src/view/ClientForm.fxml
@@ -1,31 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTextArea?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClientFormController">
+<AnchorPane fx:id="main" prefHeight="600.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClientFormController">
    <children>
-      <ImageView fitHeight="480.0" fitWidth="444.0" layoutX="3.0" layoutY="47.0">
-         <image>
-            <Image url="@../asscent/cbg.jpg" />
-         </image>
-      </ImageView>
       <TextField layoutY="1.0" prefHeight="51.0" prefWidth="450.0" style="-fx-background-color: black;" />
       <Label fx:id="lblName" layoutX="129.0" layoutY="8.0" prefHeight="35.0" prefWidth="218.0" textFill="#f2f2f2">
          <font>
             <Font size="30.0" />
          </font>
       </Label>
-      <JFXTextArea fx:id="txtArea" layoutX="2.0" layoutY="58.0" prefHeight="472.0" prefWidth="444.0" />
       <TextField fx:id="txtEnter" layoutX="57.0" layoutY="542.0" prefHeight="38.0" prefWidth="288.0" />
       <Button layoutX="388.0" layoutY="541.0" mnemonicParsing="false" onAction="#btnSendOnAction" prefHeight="38.0" prefWidth="47.0" style="-fx-background-color: black;" text="Send" textFill="#f8f7f7">
          <cursor>
@@ -67,5 +61,10 @@
             <Image url="@../asscent/man.png" />
          </image>
       </ImageView>
+      <ScrollPane layoutX="7.0" layoutY="59.0" prefHeight="466.0" prefWidth="436.0">
+         <content>
+            <VBox fx:id="vBox" prefHeight="449.0" prefWidth="434.0" />
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
